- 
    Bug 
- 
    Resolution: Fixed
- 
    P0: Blocker 
- 
    Qt Creator 18.0.0-beta1
- 
    None
- 
        
- 
        0291076e5 (18.0), db7845325 (18.0)
Doing release testing on macOS, I can not configure any projects.
Generating compilation database for Clang-Tidy at "/var/folders/5x/gr5kb_1s3ql3cm4_05m4wts00000gn/T/QtCreator-GtGfGW/Clang-TidybocnAs" ... Compilation database for Clang-Tidy successfully generated at "/var/folders/5x/gr5kb_1s3ql3cm4_05m4wts00000gn/T/QtCreator-GtGfGW/Clang-TidybocnAs". Generating compilation database for Clazy at "/var/folders/5x/gr5kb_1s3ql3cm4_05m4wts00000gn/T/QtCreator-GtGfGW/ClazyjDjZMV" ... Compilation database for Clazy successfully generated at "/var/folders/5x/gr5kb_1s3ql3cm4_05m4wts00000gn/T/QtCreator-GtGfGW/ClazyjDjZMV". [cmake] Running /opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/opengl/hellogles3 -B /Users/torarne/Qt/Examples/Qt-6.10.0/opengl/hellogles3/build/Qt_6_10_0_for_iOS -DCMAKE_GENERATOR:STRING=Xcode -DCMAKE_PREFIX_PATH:PATH=/Users/torarne/Qt/6.10.0/ios -DCMAKE_PROJECT_INCLUDE_BEFORE:FILEPATH=/Users/torarne/Qt/Examples/Qt-6.10.0/opengl/hellogles3/build/Qt_6_10_0_for_iOS/.qtc/package-manager/auto-setup.cmake -DCMAKE_CXX_FLAGS_INIT:STRING=-DQT_QML_DEBUG -DCMAKE_COLOR_DIAGNOSTICS:BOOL=ON -DCMAKE_TOOLCHAIN_FILE:FILEPATH=/Users/torarne/Qt/6.10.0/ios/lib/cmake/Qt6/qt.toolchain.cmake -DQT_QMAKE_EXECUTABLE:FILEPATH=/Users/torarne/Qt/6.10.0/ios/bin/qmake -DQT_MAINTENANCE_TOOL:FILEPATH=/Users/torarne/Qt/MaintenanceTool.app/Contents/MacOS/MaintenanceTool -DCMAKE_CXX_COMPILER:FILEPATH=/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -DCMAKE_C_COMPILER:FILEPATH=/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -DCMAKE_OSX_SYSROOT:STRING=iphoneos -DCMAKE_XCODE_ATTRIBUTE_DEVELOPMENT_TEAM:STRING=A5GTH44LYL -DCMAKE_XCODE_ATTRIBUTE_DEVELOPMENT_TEAM:STRING=A5GTH44LYL in /Users/torarne/Qt/Examples/Qt-6.10.0/opengl/hellogles3/build/Qt_6_10_0_for_iOS. [cmake] -- The CXX compiler identification is AppleClang 17.0.0.17000319 [cmake] -- Detecting CXX compiler ABI info [cmake] -- Detecting CXX compiler ABI info - done [cmake] -- Check for working CXX compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ - skipped [cmake] -- Detecting CXX compile features [cmake] -- Detecting CXX compile features - done [cmake] -- Found ZLIB: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.0.sdk/usr/lib/libz.tbd (found version "1.2.12") [cmake] -- Found WrapSystemZLIB: TRUE (found version "1.2.12") [cmake] -- Using system ZLIB. [cmake] -- Performing Test HAVE_STDATOMIC [cmake] -- Performing Test HAVE_STDATOMIC - Success [cmake] -- Looking for backtrace [cmake] -- Looking for backtrace - found [cmake] -- backtrace facility detected in default set of libraries [cmake] -- Found Backtrace: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.0.sdk/usr/include [cmake] -- Using Qt bundled PCRE2. [cmake] -- Performing Test HAVE_GETTIME [cmake] -- Performing Test HAVE_GETTIME - Success [cmake] -- Performing Test HAVE_SHM_OPEN_SHM_UNLINK [cmake] -- Performing Test HAVE_SHM_OPEN_SHM_UNLINK - Success [cmake] -- Performing Test HAVE_EGL [cmake] -- Performing Test HAVE_EGL - Failed [cmake] -- Could NOT find EGL (missing: EGL_INCLUDE_DIR HAVE_EGL EGL_LIBRARY) [cmake] -- Could NOT find EGL (missing: EGL_INCLUDE_DIR HAVE_EGL EGL_LIBRARY) [cmake] -- Performing Test HAVE_GLESv2 [cmake] -- Performing Test HAVE_GLESv2 - Success [cmake] -- Using Qt bundled PNG. [cmake] -- Using Qt bundled Harfbuzz. [cmake] -- Using Qt bundled Freetype. [cmake] -- Using Qt bundled Jpeg. [cmake] -- Configuring done (11.1s) [cmake] -- Generating done (0.2s) [cmake] CMake Warning: [cmake] Manually-specified variables were not used by the project: [cmake] [cmake] CMAKE_COLOR_DIAGNOSTICS [cmake] [cmake] [cmake] -- Build files have been written to: /Users/torarne/Qt/Examples/Qt-6.10.0/opengl/hellogles3/build/Qt_6_10_0_for_iOS [cmake] [cmake] Elapsed time: 00:11. Generating compilation database for Clang-Tidy at "/var/folders/5x/gr5kb_1s3ql3cm4_05m4wts00000gn/T/QtCreator-GtGfGW/Clang-TidyrzNryg" ... Compilation database for Clang-Tidy successfully generated at "/var/folders/5x/gr5kb_1s3ql3cm4_05m4wts00000gn/T/QtCreator-GtGfGW/Clang-TidyrzNryg". Generating compilation database for Clazy at "/var/folders/5x/gr5kb_1s3ql3cm4_05m4wts00000gn/T/QtCreator-GtGfGW/ClazynsPXyj" ... Compilation database for Clazy successfully generated at "/var/folders/5x/gr5kb_1s3ql3cm4_05m4wts00000gn/T/QtCreator-GtGfGW/ClazynsPXyj". [cmake] Running /opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts -B /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_iOS -DCMAKE_GENERATOR:STRING=Xcode -DCMAKE_PREFIX_PATH:PATH=/Users/torarne/Qt/6.10.0/ios -DCMAKE_PROJECT_INCLUDE_BEFORE:FILEPATH=/Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_iOS/.qtc/package-manager/auto-setup.cmake -DCMAKE_CXX_FLAGS_INIT:STRING=-DQT_QML_DEBUG -DCMAKE_COLOR_DIAGNOSTICS:BOOL=ON -DCMAKE_TOOLCHAIN_FILE:FILEPATH=/Users/torarne/Qt/6.10.0/ios/lib/cmake/Qt6/qt.toolchain.cmake -DQT_QMAKE_EXECUTABLE:FILEPATH=/Users/torarne/Qt/6.10.0/ios/bin/qmake -DQT_MAINTENANCE_TOOL:FILEPATH=/Users/torarne/Qt/MaintenanceTool.app/Contents/MacOS/MaintenanceTool -DCMAKE_CXX_COMPILER:FILEPATH=/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -DCMAKE_C_COMPILER:FILEPATH=/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -DCMAKE_OSX_SYSROOT:STRING=iphoneos -DCMAKE_XCODE_ATTRIBUTE_DEVELOPMENT_TEAM:STRING=A5GTH44LYL -DCMAKE_XCODE_ATTRIBUTE_DEVELOPMENT_TEAM:STRING=A5GTH44LYL in /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_iOS. [cmake] -- The CXX compiler identification is AppleClang 17.0.0.17000319 [cmake] -- Detecting CXX compiler ABI info [cmake] -- Detecting CXX compiler ABI info - done [cmake] -- Check for working CXX compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ - skipped [cmake] -- Detecting CXX compile features [cmake] -- Detecting CXX compile features - done [cmake] -- Found ZLIB: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.0.sdk/usr/lib/libz.tbd (found version "1.2.12") [cmake] -- Found WrapSystemZLIB: TRUE (found version "1.2.12") [cmake] -- Using system ZLIB. [cmake] -- Performing Test HAVE_STDATOMIC [cmake] -- Performing Test HAVE_STDATOMIC - Success [cmake] -- Looking for backtrace [cmake] -- Looking for backtrace - found [cmake] -- backtrace facility detected in default set of libraries [cmake] -- Found Backtrace: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.0.sdk/usr/include [cmake] -- Using Qt bundled PCRE2. [cmake] -- Performing Test HAVE_GETTIME [cmake] -- Performing Test HAVE_GETTIME - Success [cmake] -- Performing Test HAVE_SHM_OPEN_SHM_UNLINK [cmake] -- Performing Test HAVE_SHM_OPEN_SHM_UNLINK - Success [cmake] -- Performing Test HAVE_EGL [cmake] -- Performing Test HAVE_EGL - Failed [cmake] -- Could NOT find EGL (missing: EGL_INCLUDE_DIR HAVE_EGL EGL_LIBRARY) [cmake] -- Could NOT find EGL (missing: EGL_INCLUDE_DIR HAVE_EGL EGL_LIBRARY) [cmake] -- Performing Test HAVE_GLESv2 [cmake] -- Performing Test HAVE_GLESv2 - Success [cmake] -- Using Qt bundled PNG. [cmake] -- Using Qt bundled Harfbuzz. [cmake] -- Using Qt bundled Freetype. [cmake] -- Using Qt bundled Jpeg. [cmake] Detected locale "C" with character encoding "US-ASCII", which is not UTF-8. [cmake] Qt depends on a UTF-8 locale, and has switched to "UTF-8" instead. [cmake] If this causes problems, reconfigure your locale. See the locale(1) manual [cmake] for more information. [cmake] -- Configuring done (11.1s) [cmake] -- Generating done (0.8s) [cmake] CMake Warning: [cmake] Manually-specified variables were not used by the project: [cmake] [cmake] CMAKE_COLOR_DIAGNOSTICS [cmake] [cmake] [cmake] -- Build files have been written to: /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_iOS [cmake] [cmake] Elapsed time: 00:12. [cmake] Running /opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts -B /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug -DCMAKE_GENERATOR:STRING=Ninja -DCMAKE_PREFIX_PATH:PATH=/Users/torarne/Qt/6.10.0/macos -DCMAKE_PROJECT_INCLUDE_BEFORE:FILEPATH=/Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug/.qtc/package-manager/auto-setup.cmake -DCMAKE_CXX_FLAGS_INIT:STRING=-DQT_QML_DEBUG -DCMAKE_COLOR_DIAGNOSTICS:BOOL=ON -DQT_QMAKE_EXECUTABLE:FILEPATH=/Users/torarne/Qt/6.10.0/macos/bin/qmake -DQT_MAINTENANCE_TOOL:FILEPATH=/Users/torarne/Qt/MaintenanceTool.app/Contents/MacOS/MaintenanceTool -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_CXX_COMPILER:FILEPATH=/opt/homebrew/opt/ccache/libexec/clang++ -DCMAKE_C_COMPILER:FILEPATH=/opt/homebrew/opt/ccache/libexec/clang in /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug. [cmake] CMake Error: CMake was unable to find a build program corresponding to "Ninja". CMAKE_MAKE_PROGRAM is not set. You probably need to select a different build tool. [cmake] -- Configuring incomplete, errors occurred! [cmake] [cmake] The command "/opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts -B /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug -DCMAKE_GENERATOR:STRING=Ninja -DCMAKE_PREFIX_PATH:PATH=/Users/torarne/Qt/6.10.0/macos -DCMAKE_PROJECT_INCLUDE_BEFORE:FILEPATH=/Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug/.qtc/package-manager/auto-setup.cmake -DCMAKE_CXX_FLAGS_INIT:STRING=-DQT_QML_DEBUG -DCMAKE_COLOR_DIAGNOSTICS:BOOL=ON -DQT_QMAKE_EXECUTABLE:FILEPATH=/Users/torarne/Qt/6.10.0/macos/bin/qmake -DQT_MAINTENANCE_TOOL:FILEPATH=/Users/torarne/Qt/MaintenanceTool.app/Contents/MacOS/MaintenanceTool -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_CXX_COMPILER:FILEPATH=/opt/homebrew/opt/ccache/libexec/clang++ -DCMAKE_C_COMPILER:FILEPATH=/opt/homebrew/opt/ccache/libexec/clang" terminated with exit code 1. [cmake] [cmake] Elapsed time: 00:00. [cmake] Running /opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts -B /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug in /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug. [cmake] CMake Error: CMake was unable to find a build program corresponding to "Ninja". CMAKE_MAKE_PROGRAM is not set. You probably need to select a different build tool. [cmake] -- Configuring incomplete, errors occurred! [cmake] [cmake] The command "/opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts -B /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug" terminated with exit code 1. [cmake] [cmake] Elapsed time: 00:00. [cmake] Running /opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts -B /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug in /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug. [cmake] -- Configuring incomplete, errors occurred! [cmake] CMake Error: CMake was unable to find a build program corresponding to "Ninja". CMAKE_MAKE_PROGRAM is not set. You probably need to select a different build tool. [cmake] [cmake] The command "/opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts -B /Users/torarne/Qt/Examples/Qt-6.10.0/quick/responsivelayouts/build/Qt_6_10_0_for_macOS-Debug" terminated with exit code 1. [cmake] [cmake] Elapsed time: 00:00. [cmake] Running /opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/widgets/graphicsview/chip -B /Users/torarne/Qt/Examples/Qt-6.10.0/widgets/graphicsview/chip/build/Qt_6_10_0_for_macOS-Debug -DCMAKE_GENERATOR:STRING=Ninja -DCMAKE_PREFIX_PATH:PATH=/Users/torarne/Qt/6.10.0/macos -DCMAKE_PROJECT_INCLUDE_BEFORE:FILEPATH=/Users/torarne/Qt/Examples/Qt-6.10.0/widgets/graphicsview/chip/build/Qt_6_10_0_for_macOS-Debug/.qtc/package-manager/auto-setup.cmake -DCMAKE_CXX_FLAGS_INIT:STRING=-DQT_QML_DEBUG -DCMAKE_COLOR_DIAGNOSTICS:BOOL=ON -DQT_QMAKE_EXECUTABLE:FILEPATH=/Users/torarne/Qt/6.10.0/macos/bin/qmake -DQT_MAINTENANCE_TOOL:FILEPATH=/Users/torarne/Qt/MaintenanceTool.app/Contents/MacOS/MaintenanceTool -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_CXX_COMPILER:FILEPATH=/opt/homebrew/opt/ccache/libexec/clang++ -DCMAKE_C_COMPILER:FILEPATH=/opt/homebrew/opt/ccache/libexec/clang in /Users/torarne/Qt/Examples/Qt-6.10.0/widgets/graphicsview/chip/build/Qt_6_10_0_for_macOS-Debug. [cmake] -- Configuring incomplete, errors occurred! [cmake] CMake Error: CMake was unable to find a build program corresponding to "Ninja". CMAKE_MAKE_PROGRAM is not set. You probably need to select a different build tool. [cmake] [cmake] The command "/opt/homebrew/Cellar/cmake/4.0.3/bin/cmake -S /Users/torarne/Qt/Examples/Qt-6.10.0/widgets/graphicsview/chip -B /Users/torarne/Qt/Examples/Qt-6.10.0/widgets/graphicsview/chip/build/Qt_6_10_0_for_macOS-Debug -DCMAKE_GENERATOR:STRING=Ninja -DCMAKE_PREFIX_PATH:PATH=/Users/torarne/Qt/6.10.0/macos -DCMAKE_PROJECT_INCLUDE_BEFORE:FILEPATH=/Users/torarne/Qt/Examples/Qt-6.10.0/widgets/graphicsview/chip/build/Qt_6_10_0_for_macOS-Debug/.qtc/package-manager/auto-setup.cmake -DCMAKE_CXX_FLAGS_INIT:STRING=-DQT_QML_DEBUG -DCMAKE_COLOR_DIAGNOSTICS:BOOL=ON -DQT_QMAKE_EXECUTABLE:FILEPATH=/Users/torarne/Qt/6.10.0/macos/bin/qmake -DQT_MAINTENANCE_TOOL:FILEPATH=/Users/torarne/Qt/MaintenanceTool.app/Contents/MacOS/MaintenanceTool -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_CXX_COMPILER:FILEPATH=/opt/homebrew/opt/ccache/libexec/clang++ -DCMAKE_C_COMPILER:FILEPATH=/opt/homebrew/opt/ccache/libexec/clang" terminated with exit code 1. [cmake] [cmake] Elapsed time: 00:00.
The automatically generated kit seems to have picked up my CMake coming from Homebrew, but doesn't seem to set things up to run Ninja, even though it detected/chose to use Ninja:

In my terminal this all works fine because I've added /opt/homebrew/bin to my PATH in .zshrc.
I expect Qt Creator to work out of the box (and this has not been an issue before), without setting PATH manually, especially since it seems to find other tools (CMake/clang) from homebrew.
| For Gerrit Dashboard: QTCREATORBUG-33560 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 679121,2 | CMakePM: Add explicit homebrew / macports ninja search paths | 18.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 | 
| 685608,9 | CMakePM: Fix ninja detection on Docker / macOS | 18.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 | 

