CMakePM: Add explicit homebrew / macports ninja search paths

Amends 449f3b94f0cacfc62aeb7feb4bac644860d8b0f6

Do no rely on the parent directory path of the CMake tool to find "ninja"
on macOS.

Do the explicit search just like for CMake.

Fixes: QTCREATORBUG-33560
Change-Id: I227393d266304f100eaf36696781ed1f188a6cb5
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>